--- a/css/style.css
+++ b/css/style.css
@@ -26,13 +26,16 @@
   position: relative;
   justify-content: center;  
   align-self: center;
-  color: rgb(248, 2, 2);
   top: 25%;   
   z-index: 4;
 }
 
 #zikrs {
-  font-size: 70px;  
+  color: white;
+  font-size: 75px;
+  font-weight: bold;
+  /* -webkit-text-stroke:2px rgb(29, 23, 105); */
+  text-shadow: 0 0 7px #180e01; 
 }
 
 .zikrButton {
@@ -93,8 +96,7 @@ body {
   height:50%;
   left: 0%;
   top: 20%;
-  z-index: 1;
-  
+  z-index: 1;  
 }
 
 .moon {
