--- a/css/style.css
+++ b/css/style.css
@@ -56,6 +56,7 @@
   width: 40vw;
   height: 130px;
   max-width: 400px;
+  min-width: 200px;
   background-color: rgb(57, 214, 253);
   opacity: 0.4;
   /* border-color: rgb(7, 1, 31);  
@@ -72,6 +73,7 @@
   width: 40vw;
   height: 130px;
   max-width: 400px;
+  min-width: 200px;
   background-color: transparent;
   /* border-color: rgb(7, 1, 31);  
   border-width: 6px;   */
@@ -90,6 +92,7 @@
   width: 40vw;
   height: 130px;
   max-width: 400px;
+  min-width: 200px;
   background-color: Transparent;
   /* border-color: rgb(12, 4, 117);   */
   /* border-width: 6px;  
