--- a/css/style.css
+++ b/css/style.css
@@ -44,7 +44,7 @@
   position: relative;
   justify-content:center;  
   /* align-self: center; */
-  top: 30%;  
+  top: 1%;  
   z-index: 5;
   
   
@@ -167,7 +167,8 @@ body {
 }
 
 .loader > img {
-  width: 100px;
+  width: auto;
+  height: 50%;
 }
 
 .loader.hidden {
