--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,8 @@
-.zikr_button_container {
+.zikrButtonContainer {
   display:flex;
   background-color: #0D1B1E ;
   justify-content: center; 
-  vertical-align:text-bottom;
-  
-}
-
-html {
-  overflow: hidden;
+  vertical-align:text-bottom;  
 }
 
 .zikrNumber {
@@ -29,8 +24,8 @@ html {
 
 .zikrButton {
   position: absolute;
-  background: Aqua; 
-  border-color: rgb(57, 214, 253);
+  background: rgb(158, 235, 235);
+  border-color: rgb(5, 163, 202);
   border-width: 2px;  
   border-radius: 15px;
   color:Navy;
@@ -38,24 +33,21 @@ html {
   z-index: 3;
   bottom: 10%;
   width: 60vw;
-  height: 75px;
+  height: 85px;
   max-width: 400px;
-  
+  font-weight: 500;
 }
 
-.reset_button_container {
+.resetButtonContainer {
   display:flex;
   position: relative;
   justify-content:center;  
   /* align-self: center; */
   top: 10%;  
-  z-index: 5;
-  
-  
+  z-index: 5;  
 }
 
-.resetButton3 {   
-  
+.resetBackground {     
   position: absolute;
   width: 40vw;
   height: 130px;
@@ -66,13 +58,10 @@ html {
   /* border-color: rgb(7, 1, 31);  
   border-width: 6px;   */
   border-radius: 15px;
-  border: none;
-  
- 
+  border: none; 
 }
 
-.resetButton {   
-  
+.counter {     
   position: absolute;
   width: 40vw;
   height: 130px;
@@ -83,15 +72,12 @@ html {
   border-width: 6px;   */
   border-radius: 15px;
   border: none;
-  
- 
 }
 
-.resetButton2 {   
+.resetButton {   
   display: flex;
   justify-content:center;
-  align-items: flex-end;  
-  
+  align-items: flex-end;    
   position:absolute;
   width: 40vw;
   height: 130px;
@@ -103,11 +89,9 @@ html {
   border-radius: 15px; */
   line-height: 30px;
   border: none;
-
   color: rgb(24, 4, 94);
   font-size: 21px;
   font-weight: bold;
- 
 }
 
 body {
@@ -117,11 +101,10 @@ body {
   /* background: url('/img/background_mountains.png'), linear-gradient(red, yellow); */
   background-repeat: no-repeat;
   background-size: cover;
-  background-position: center center;
-  
+  background-position: center center;  
 }
 
-.background_mountains {
+.backgroundMountains {
   position: absolute;
   display:block;
   width:100%;
@@ -187,7 +170,8 @@ body {
       visibility: hidden;
   }
 }
-.appName{
+
+.appName {
   display: flex;
   z-index: 100;
   position:fixed;
@@ -196,7 +180,8 @@ body {
   top:30%;
   font-weight: bold;
 }
-.preloader{
+
+.preloader {
   display: flex;
   z-index: 99;
   position:fixed;
