clean Files and Code

--- a/css/style.css
+++ b/css/style.css
@@ -28,7 +28,7 @@
   border-color: rgb(5, 163, 202);
   border-width: 2px;  
   border-radius: 15px;
-  color:Navy;
+  color:rgb(52, 52, 138);
   font-size: 27px;
   z-index: 3;
   bottom: 10%;
